--- a/src/app/photos/photos-list/photos-list.component.html
+++ b/src/app/photos/photos-list/photos-list.component.html
@@ -1,12 +1,1 @@
-<!-- one way data-bind -->
-<!-- dados fluem do componente para o template -->
-
-<!-- diretivas *ngfor -->
-
-<ol class="list-unstyled row">
-    <li *ngFor="let photo of photos" class="col-4">
-        <ap-photo  [url]="photo.url" 
-        [description]="photo.description">
-        </ap-photo>
-    </li>
-</ol>
+<ap-photos [photos]="photos"></ap-photos>
