--- a/src/app/photos/photos-list/photos/photos.component.html
+++ b/src/app/photos/photos-list/photos/photos.component.html
@@ -3,6 +3,11 @@
 
 <!-- diretivas *ngfor -->
 
+<p class="text-center text-muted" *ngIf="!photos.length" style="font-weight: bold;">
+  Nenhuma foto localizada!
+</p>
+
+
 <ol class="list-unstyled row">
   <li *ngFor="let cols of rows" class="row">
     <div *ngFor="let photo of cols" class="col-4">
