--- a/src/app/photos/photos-list/photos-list.component.html
+++ b/src/app/photos/photos-list/photos-list.component.html
@@ -5,9 +5,12 @@
             class="rounded" type="search"
             placeholder="search..."
             autofocus
-            (keyup)="filter = $event.target.value">
+            (keyup)="debounce.next($event.target.value)">
     </form>
 </div>
 {{  filter | uppercase }}
 <ap-photos [photos]="photos | filterByDescription: filter"></ap-photos>
 
+<ap-load-button (click)="load()" 
+                [hasMore]="hasMore">
+</ap-load-button>
