--- a/src/app/photos/photos-list/photos-list.component.html
+++ b/src/app/photos/photos-list/photos-list.component.html
@@ -1,6 +1,7 @@
 <div class="text-center mt-3 mb-3">
     <!--da_view_para_componente-->
     <form>
+        <i aria-hidden="true" class="fa fa-search me-1"></i>
         <input
             class="rounded" type="search"
             placeholder="search..."
